# ssvm-nodejs-starter

./: Cargo.toml  Dockerfile  README.md
node/: app.js
src/: lib.rs
